# lmair-sdk-python

./: .gitignore  LICENCE  README.md  lmair.py  pyproject.toml  requirements.txt  setup.py
tests/: test_lmair.py
